[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/kotlin/tools/KotlinTools.gd" type="Script" id=1]

[node name="KotlinToolMenuItem" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -307.0
margin_top = -176.0
margin_right = 93.0
margin_bottom = 64.0
size_flags_vertical = 3
window_title = "Kotlin Tools"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
buildTypeSelectorPath = NodePath("ActionsContainer/BuildContainer/BuildTypeButton")
platformSelectorPath = NodePath("ActionsContainer/ConfigContainer/PlatformButton")
armArchSelectorPath = NodePath("ActionsContainer/ConfigContainer/ArmArchOptionButton")
iosIdentityLineEditPath = NodePath("ActionsContainer/ConfigContainer/iOSIdentityLineEdit")

[node name="SetupContainer" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="SetupContainer"]
margin_right = 384.0
margin_bottom = 181.0
rect_min_size = Vector2( 0, 80 )
size_flags_vertical = 3
text = "Add Kotlin support for this Godot project.

This will download the Kotlin template and extract it in place."

[node name="CenterContainer" type="CenterContainer" parent="SetupContainer"]
margin_top = 185.0
margin_right = 384.0
margin_bottom = 205.0

[node name="AddSupportButton" type="Button" parent="SetupContainer/CenterContainer"]
margin_left = 126.0
margin_right = 257.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "Add Kotlin Support"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SetupContainer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="ActionsContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildContainer" type="VBoxContainer" parent="ActionsContainer"]
margin_right = 186.0
margin_bottom = 224.0
size_flags_horizontal = 3

[node name="ActionsLabel" type="Label" parent="ActionsContainer/BuildContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Actions"
align = 1

[node name="HSeparator" type="HSeparator" parent="ActionsContainer/BuildContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 22.0

[node name="BuildLabel" type="Label" parent="ActionsContainer/BuildContainer"]
margin_top = 26.0
margin_right = 186.0
margin_bottom = 40.0
text = "Build Kotlin Scripts:"

[node name="BuildTypeButton" type="OptionButton" parent="ActionsContainer/BuildContainer"]
margin_top = 44.0
margin_right = 186.0
margin_bottom = 64.0
text = "debug"
items = [ "debug", null, false, 0, null, "release", null, false, 1, null ]
selected = 0

[node name="BuildButton" type="Button" parent="ActionsContainer/BuildContainer"]
margin_top = 68.0
margin_right = 186.0
margin_bottom = 88.0
text = "Build Kotlin"

[node name="ConfigGradleButton" type="Button" parent="ActionsContainer/BuildContainer"]
visible = false
margin_top = 66.0
margin_right = 97.0
margin_bottom = 86.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Config Gradle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="ActionsContainer"]
margin_left = 190.0
margin_right = 194.0
margin_bottom = 224.0

[node name="ConfigContainer" type="VBoxContainer" parent="ActionsContainer"]
margin_left = 198.0
margin_right = 384.0
margin_bottom = 224.0
size_flags_horizontal = 3

[node name="ConfigLabel" type="Label" parent="ActionsContainer/ConfigContainer"]
margin_right = 186.0
margin_bottom = 14.0
text = "Configuration"
align = 1

[node name="HSeparator" type="HSeparator" parent="ActionsContainer/ConfigContainer"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlatformLabel" type="Label" parent="ActionsContainer/ConfigContainer"]
margin_top = 26.0
margin_right = 186.0
margin_bottom = 40.0
text = "Build Platform:"

[node name="PlatformButton" type="OptionButton" parent="ActionsContainer/ConfigContainer"]
margin_top = 44.0
margin_right = 186.0
margin_bottom = 64.0
text = "All"
items = [ "All", null, false, 0, null, "Windows", null, false, 1, null, "Linux", null, false, 2, null, "MacOS", null, false, 3, null, "iOS", null, false, 4, null, "Android", null, false, 5, null ]
selected = 0

[node name="ArmArchLabel" type="Label" parent="ActionsContainer/ConfigContainer"]
margin_top = 68.0
margin_right = 186.0
margin_bottom = 82.0
text = "Arm Arcitecture:"

[node name="ArmArchOptionButton" type="OptionButton" parent="ActionsContainer/ConfigContainer"]
margin_top = 86.0
margin_right = 186.0
margin_bottom = 106.0
text = "arm64"
items = [ "arm64", null, false, 0, null, "x64", null, false, 1, null ]
selected = 0

[node name="iOSIdentityLabel" type="Label" parent="ActionsContainer/ConfigContainer"]
margin_top = 110.0
margin_right = 186.0
margin_bottom = 124.0
text = "iOS Signing Identity:"

[node name="iOSIdentityLineEdit" type="LineEdit" parent="ActionsContainer/ConfigContainer"]
margin_top = 128.0
margin_right = 186.0
margin_bottom = 152.0
[connection signal="about_to_show" from="." to="." method="_on_KotlinToolMenuItem_about_to_show"]
[connection signal="pressed" from="SetupContainer/CenterContainer/AddSupportButton" to="." method="_on_AddSupportButton_pressed"]
[connection signal="item_selected" from="ActionsContainer/BuildContainer/BuildTypeButton" to="." method="_on_BuildTypeButton_item_selected"]
[connection signal="pressed" from="ActionsContainer/BuildContainer/BuildButton" to="." method="_on_BuildButton_pressed"]
[connection signal="pressed" from="ActionsContainer/BuildContainer/ConfigGradleButton" to="." method="_on_ConfigGradleButton_pressed"]
[connection signal="item_selected" from="ActionsContainer/ConfigContainer/PlatformButton" to="." method="_on_PlatformButton_item_selected"]
[connection signal="item_selected" from="ActionsContainer/ConfigContainer/ArmArchOptionButton" to="." method="_on_ArmArchOptionButton_item_selected"]
[connection signal="text_changed" from="ActionsContainer/ConfigContainer/iOSIdentityLineEdit" to="." method="_on_iOSIdentityLineEdit_text_changed"]
